fixed slot animation overflow issue

--- a/frontend/src/components/SlotSpinner/SlotSpinner.css
+++ b/frontend/src/components/SlotSpinner/SlotSpinner.css
@@ -47,6 +47,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .bpmValueDisplaySpinner {
@@ -157,7 +158,7 @@
   width: 60px;
   position: absolute;
   right: 365px;
-  top: -270px;
+  top: -280px;
   opacity: 0;
   z-index: 20;
   filter: drop-shadow(2px  2px rgba(255, 255, 255, 0.3));
